# internal/handlers/feed_follows.go
@@ -12,6 +12,17 @@ import (
 	"github.com/google/uuid"
 )
 
+// HandlerCreateFeedFollow godoc
+// @Summary Create a new feed follow
+// @Description Create a new feed follow. Requires authentication.
+// @Tags feed_follows
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param feed_id body string true "Feed ID"
+// @Success 201 "{object}" "FeedFollow"
+// @Failure 400 "{object}" "ErrorResponse"
+// @Router /feed_follows [post]
 func (apiCfg *API) HandlerCreateFeedFollow(w http.ResponseWriter, r *http.Request, user database.User) {
 	type parameters struct {
 		FeedID uuid.UUID `json:"feed_id"`
@@ -39,6 +50,16 @@ func (apiCfg *API) HandlerCreateFeedFollow(w http.ResponseWriter, r *http.Reques
 	utils.RespondWithJSON(w, 201, utils.DatabaseFeedFollowToFeedFollow(feedFollow))
 }
 
+// HandlerGetFeedFollows godoc
+// @Summary Get all feed follows
+// @Description Get all feed follows. Requires authentication.
+// @Tags feed_follows
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Success 200 "{object}" "[]FeedFollow"
+// @Failure 400 "{object}" "ErrorResponse"
+// @Router /feed_follows [get]
 func (apiCfg *API) HandlerGetFeedFollows(w http.ResponseWriter, r *http.Request, user database.User) {
 
 	feedFollows, err := apiCfg.DB.GetFeedFollows(r.Context(), user.ID)
@@ -50,6 +71,17 @@ func (apiCfg *API) HandlerGetFeedFollows(w http.ResponseWriter, r *http.Request,
 	utils.RespondWithJSON(w, 200, utils.DatabaseFeedFollowsToFeedFollows(feedFollows))
 }
 
+// HandlerDeleteFeedFollow godoc
+// @Summary Delete a feed follow
+// @Description Delete a feed follow. Requires authentication.
+// @Tags feed_follows
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param feedFollowID path string true "Feed Follow ID"
+// @Success 200 "{object}" "struct{}"
+// @Failure 400 "{object}" "ErrorResponse"
+// @Router /feed_follows/{feedFollowID} [delete]
 func (apiCfg *API) HandlerDeleteFeedFollow(w http.ResponseWriter, r *http.Request, user database.User) {
 	feedFollowID, err := uuid.Parse(chi.URLParam(r, "feedFollowID"))
 	if err != nil {
